correction comportement de liens en ajoutant un z-index pour que le curseur s'affiche correctement sur tout le container

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -86,6 +86,7 @@ a {
     text-decoration: none;
     color: #000;
     cursor: pointer;
+    z-index: 9;
 }
 
 /*#########################################################*/
